--- a/DoAn1_ChuongTrinhPhanSo/DoAn1_ChuongTrinhPhanSo/DoAn1_ChuongTrinhPhanSo.csproj
+++ b/DoAn1_ChuongTrinhPhanSo/DoAn1_ChuongTrinhPhanSo/DoAn1_ChuongTrinhPhanSo.csproj
@@ -54,6 +54,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Fraction.cs" />
+    <Compile Include="MixedFraction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
