--- a/DoAn1_ChuongTrinhPhanSo/DoAn1_ChuongTrinhPhanSo/DoAn1_ChuongTrinhPhanSo.csproj
+++ b/DoAn1_ChuongTrinhPhanSo/DoAn1_ChuongTrinhPhanSo/DoAn1_ChuongTrinhPhanSo.csproj
@@ -51,6 +51,10 @@
     <ApplicationIcon>Fradction.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Deveel.Math, Version=1.6.1.93, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\dmath.1.6.1.93\lib\net20\Deveel.Math.pdb\Deveel.Math.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -72,11 +76,25 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Fraction.cs" />
+    <Compile Include="FractionCalculator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FractionCalculator.Designer.cs">
+      <DependentUpon>FractionCalculator.cs</DependentUpon>
+    </Compile>
     <Compile Include="MixedFraction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility.cs" />
+    <Compile Include="UtilityCalculator\CalculatorBigNum.cs" />
+    <Compile Include="UtilityCalculator\FractionBignum.cs" />
+    <Compile Include="UtilityCalculator\InfixExpressionCalculator.cs" />
+    <Compile Include="UtilityCalculator\UtilityBigNum.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FractionCalculator.resx">
+      <DependentUpon>FractionCalculator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -87,6 +105,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
