--- a/DoAn1_ChuongTrinhPhanSo/DoAn1_ChuongTrinhPhanSo/DoAn1_ChuongTrinhPhanSo.csproj
+++ b/DoAn1_ChuongTrinhPhanSo/DoAn1_ChuongTrinhPhanSo/DoAn1_ChuongTrinhPhanSo.csproj
@@ -54,6 +54,9 @@
     <Reference Include="Deveel.Math, Version=1.6.1.93, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\dmath.1.6.1.93\lib\net20\Deveel.Math.pdb\Deveel.Math.dll</HintPath>
     </Reference>
+    <Reference Include="MathParser.org-mXparser, Version=4.3.3.0, Culture=neutral, PublicKeyToken=0fbab7add73ed6e2, processorArchitecture=MSIL">
+      <HintPath>..\packages\MathParser.org-mXparser.4.3.3\lib\net472\MathParser.org-mXparser.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -68,27 +71,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Calculator.cs" />
+    <Compile Include="Old Project\Calculator.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Fraction.cs" />
+    <Compile Include="Old Project\Fraction.cs" />
     <Compile Include="FractionCalculator.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FractionCalculator.Designer.cs">
       <DependentUpon>FractionCalculator.cs</DependentUpon>
     </Compile>
-    <Compile Include="MixedFraction.cs" />
+    <Compile Include="Old Project\MixedFraction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utility.cs" />
+    <Compile Include="Old Project\Utility.cs" />
     <Compile Include="UtilityCalculator\CalculatorBigNum.cs" />
     <Compile Include="UtilityCalculator\FractionBignum.cs" />
-    <Compile Include="UtilityCalculator\InfixExpressionCalculator.cs" />
     <Compile Include="UtilityCalculator\UtilityBigNum.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
