--- a/DoAn1_ChuongTrinhPhanSo/DoAn1_ChuongTrinhPhanSo/packages.config
+++ b/DoAn1_ChuongTrinhPhanSo/DoAn1_ChuongTrinhPhanSo/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="dmath" version="1.6.1.93" targetFramework="net472" />
+  <package id="MathParser.org-mXparser" version="4.3.3" targetFramework="net472" />
 </packages>
